# Capstone

./: .gitignore  Hoffman_Device.mb  Hoffman_device_uv.psd
AnimationMentor_Stewart/: stewart_body_anim_color_sRGB_ACEScg.tga.tx
CapstoneStart/: Ship measurement notes.txt  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.1774fb716e.0.json
CapstoneStart/Assets/: Collider.controller  DONOTUSE–TEST.aif  GameManager.cs  New Lighting Settings.lighting  PlayerController.cs
CapstoneStart/Assets/Tetavi/Plugins/OSX/tetCodecMacLib.bundle/Contents/Resources/: CMakeLists.txt  Product--Constants.sh
CapstoneStart/ProjectSettings/: EditorBuildSettings.asset  NavMeshAreas.asset  ProjectSettings.asset  TagManager.asset
Maya/: Key.mb  KeyBox.mb  Pyramid.fbx  Pyramid.mb  RedWood_sRGB_ACEScg.jpg.tx  SilverKey.fbx
Maya/.mayaSwatches/: Metallic_plastic.jpg_hcm.swatch  RedWood.jpg_hcm.swatch  wooden-textured-background_53876-14865.jpg_hcm.swatch
Maya/TV/: TV.fbx  TV.mb  wooden-textured-background_53876-14865_sRGB_ACEScg.jpg.tx
Modeling/3D Models/: Altar.fbx  BabyDoll.fbx  GoldCross.fbx  Key.fbx
Modeling/Maya/: BabyDoll.mb  Pyramid.mb  SilverTexture_sRGB_ACEScg.jpg.tx
Modeling/Maya projects/: Couch_modelling.mb  Key.mb  Pyramid.mb  RoughGold_sRGB_ACEScg.jpg.tx
Modeling/Textures/: Amaranthine+Floral+Roll_sRGB_ACEScg.png.tx  (+5 more)
Textures/: ElasticRubber_sRGB_ACEScg.jpg.tx  GroundCarpet_sRGB_ACEScg.PNG.tx  Hoffman_device_UV_sRGB_ACEScg.png.tx  Leather_sRGB_ACEScg.PNG.tx  _Office carpet_sRGB_ACEScg.png.tx  paper texture_sRGB_ACEScg.png.tx  wood_sRGB_ACEScg.png.tx
(+531 files in other folders)
